Bug 1791854 - Disregard URL fragment when extracting content type from URL in mime nsStreamConverter. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D159908

--HG--
extra : rebase_source : f4712a1b2de7a30d1a4bf1013e79ea1285233a1a